--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: haskell
 before_script:
-  - "cabal install QuickCheck test-framework test-framework-quickcheck2"
+  - "cabal install array-0.3.0.3 QuickCheck test-framework test-framework-quickcheck2"
