--- a/timsort.cabal
+++ b/timsort.cabal
@@ -24,6 +24,7 @@ Library
   
 Test-Suite timsort-tests
   Ghc-options:         -Wall
+  Extensions:          BangPatterns
   Hs-source-dirs:      src test
   Main-is:             TestSuite.hs
   Type:                exitcode-stdio-1.0
