--- a/timsort.cabal
+++ b/timsort.cabal
@@ -18,9 +18,9 @@ Library
   Hs-source-dirs:      src
   Exposed-modules:     Data.Vector.Algorithms.Tim
   Build-depends:       base >= 4 && < 5,
-                       vector >= 0.9.1 && < 0.10,
+                       vector >= 0.9.1 && < 0.11,
                        primitive,
-                       vector-algorithms >= 0.5.4 && < 0.6
+                       vector-algorithms >= 0.5.4 && < 0.7
   
 Test-Suite timsort-tests
   Ghc-options:         -Wall
@@ -28,10 +28,10 @@ Test-Suite timsort-tests
   Hs-source-dirs:      src test
   Main-is:             TestSuite.hs
   Type:                exitcode-stdio-1.0
-  Build-depends:       base >= 4 && < 5,
-                       vector >= 0.9.1 && < 0.10,
+  Build-depends:       base,
+                       vector,
                        primitive,
-                       vector-algorithms >= 0.5.4 && < 0.6,
-                       QuickCheck >= 2.4.2 && < 2.5,
-                       test-framework >= 0.6 && < 0.7,
-                       test-framework-quickcheck2 >= 0.2.12.1 && < 0.3
+                       vector-algorithms,
+                       QuickCheck >= 2.5.1.1 && < 3,
+                       test-framework,
+                       test-framework-quickcheck2
