--- a/timsort.cabal
+++ b/timsort.cabal
@@ -9,12 +9,12 @@ Author:              Tim Baumann
 Maintainer:          tim@timbaumann.info
 Category:            Data
 Build-type:          Simple
-Cabal-version:       >=1.2
+Cabal-version:       >= 1.10
 
 
 Library
   Ghc-options:         -Wall
-  Extensions:          BangPatterns
+  Default-language:    Haskell2010
   Hs-source-dirs:      src
   Exposed-modules:     Data.Vector.Algorithms.Tim
   Build-depends:       base >= 4 && < 5,
@@ -24,7 +24,7 @@ Library
   
 Test-Suite timsort-tests
   Ghc-options:         -Wall
-  Extensions:          BangPatterns
+  Default-language:    Haskell2010
   Hs-source-dirs:      src test
   Main-is:             TestSuite.hs
   Type:                exitcode-stdio-1.0
@@ -35,3 +35,18 @@ Test-Suite timsort-tests
                        QuickCheck >= 2.5.1.1 && < 3,
                        test-framework,
                        test-framework-quickcheck2
+
+Benchmark timsort-bench
+  Type:                exitcode-stdio-1.0
+  Ghc-options:         -Wall -O2
+  hs-source-dirs:      benchmarks
+  Default-language:    Haskell2010
+  Main-is:             Benchmarks.hs
+  Build-depends:       base,
+                       timsort,
+                       criterion,
+                       vector,
+                       vector-algorithms,
+                       QuickCheck,
+                       primitive,
+                       deepseq
