--- a/timsort.cabal
+++ b/timsort.cabal
@@ -50,3 +50,15 @@ Benchmark timsort-bench
                        QuickCheck,
                        primitive,
                        deepseq
+
+Benchmark vector-algorithms-bench
+  Type:                exitcode-stdio-1.0
+  Ghc-options:         -Wall -O2
+  hs-source-dirs:      vector-algorithms-benchmarks
+  Default-language:    Haskell2010
+  Main-is:             Main.hs
+  Build-depends:       base,
+                       vector,
+                       vector-algorithms,
+                       mwc-random,
+                       mtl
